# fs-ia6b-nucleo

./: .gitignore  Cargo.toml  README.md  flash_device.sh  memory.x
.cargo/: config.toml
src/: main.rs
